# Telegram_bot

./: Dockerfile  Pipfile  README.md  db.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
Docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
Docs/.doctrees/: environment.pickle  index.doctree
Docs/_sources/: index.rst.txt
Docs/_static/: documentation_options.js
Documentation/source/: conf.py
app/: Dockerfile  README.md  main.py  requirements.txt
app/TG_BOT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
source/: conf.py  index.rst
