[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Telegram_bot"
version = "0.0.1"
dependencies = [
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "idna==3.4",
    "lxml==4.9.2",
    "numpy==1.24.3",
    "pandas==2.0.1",
    "pyTelegramBotAPI==4.11.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "requests==2.28.2",
    "six==1.16.0",
    "telebot==0.0.5",
    "tzdata==2023.3",
    "urllib3==1.26.15"
]
authors = [
  { name="Anastasia Strelkova"}, { name="Angelina Shalimanova"}, { name="Valery Petsinyarzh"}
]
description = "Разрабатываемый бот предоставляет информацию о достопримечательностях и интересных местах крупных городов, их фотографии и отзывы."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nastasyas0/Telegram_bot.git"
